# oneleafleft

./: .gitignore  CLAUDE.md  README.md  environment-dev.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/: app.py
aqua/: deploy.sh  full_pipeline.sh  predict.pbs  predict.yaml  setup_env.sh  train.py  train_prithvi.pbs  train_prithvi.yaml
biblio/: literature_review.md  literature_review.tex  references.bib
data/app/: demo_zone_predictions.parquet  feature_importance.csv  model_info.json
gee_app/: app.js
notebooks/: 01_eda.py  02_gee_extraction.py  03_pipeline_audit.py
notebooks/extraction/: 01_full_extraction.py
paper/: Makefile  iopart.cls  main.tex  references.bib
scripts/: ablation_study.py  add_buffers.py  add_sources.py  add_spatial_features.py  add_tabular_features.py  audit_models.py  build_chip_dataset.py  build_traintest.py  build_val.py  chip_from_tiles.py  collinearity_audit.py  demo_zone.py  download_tiles.sh  enrich_wdpa.py  export_composites_to_asset.py  export_predictions.py  export_tiles_gee.py  extract_chips_fast.py  extract_chips_hls.py  improve_prauc.py  mini_pipeline.py  paper_figures.py  patch_worldpop.py  predict_map.py  scale_up_extraction.py  shap_deep_dive.py  smoke_test_gee.py  spatial_ablation.py  temporal_ablation.py  test_no_tautology.py  train_core_model.py  train_deep_learning.py  train_xgboost.py  tune_xgboost.py  upload_gee_asset.py
tests/: test_audit_models.py  test_collinearity_core.py  test_family_ablation_and_velocity.py  test_feature_selection.py  test_tune_xgboost_spatial.py
(+7 files in other folders)
